--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "animate.css": "^4.1.1",
     "gh-pages": "^3.1.0",
     "hamburger-react": "^2.4.0",
     "react": "^17.0.1",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
