--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "gh-pages": "^3.1.0",
     "hamburger-react": "^2.4.0",
     "react": "^17.0.1",
