--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "gh-pages": "^3.1.0",
-    "hamburger-react": "^2.4.0",
     "react": "^17.0.1",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
-    "scroll-background": "^1.0.5",
     "simple-git": "^2.36.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.0"
