--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.1",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-animation-components": "^3.0.0",
